--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,3 +10,7 @@ h3 {font-size: 23px;
 font-weight: bold;}
 #white {color: white;
 background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");}
+#footer {text-align: left;
+background-color: dimgray;
+color: white;}
+#copyright {font-size: 11px;}
